# fastapi-fullstack

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: Containerfile
app/admin/models/: users.py
app/admin/routes/: users.py
app/core/: config.py  hashing.py
app/db/: base.py  base_class.py
backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  main.py  pyproject.toml  sql_app.db
backend/admin/controllers/: users.py
backend/admin/models/: groups.py  users.py
backend/admin/routes/: users.py
backend/admin/schemas/: groups.py  users.py
backend/apis/controllers/: users.py
backend/apis/routes/: users.py
backend/core/: config.py  hashing.py
backend/db/: base.py  base_class.py  session.py
backend/db/models/: users.py
backend/schemas/: groups.py  users.py
backend/src/admin/: controller.py  module.py  service.py
backend/src/admin/dto/: groups.py  users.py
backend/src/admin/entities/: users.py
backend/src/base/: hashing.py
backend/src/db/: base.py  session.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Footer.tsx  Login.tsx  Navbar.tsx
frontend/src/pages/: Dashboard.tsx
