[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nikhil Akki <17634231+nikhilakki@users.noreply.github.com >"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.10.8"}
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
black = "^23.3.0"
bandit = "^1.7.5"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
