[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["Nikhil Akki <17634231+nikhilakki@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"
aiosqlite = "^0.17.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
passlib = "^1.7.4"
databases = {extras = ["asyncpg"], version = "^0.5.5"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylama = "^8.3.8"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
